# group-process-killer

./: .gitignore  LICENSE  README.md  pyproject.toml
group_process_killer/: cli.py  killer.py
