[tool.poetry]
name = "group-process-killer"
version = "0.1.0"
description = "Lets remote hosts kill a particular process."
authors = ["Jakub Strnad <jakub.strnad@protonmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyngrok = "^7.1.2"
websockets = "^12.0"
keyboard = "^0.13.5"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
types-psutil = "^5.9.5.20240205"
types-keyboard = "^0.13.2.20240106"

[tool.poetry.scripts]
group-process-killer = "group_process_killer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
